# datascience_projects

./: .gitignore  LICENSE  README.md  pyproject.toml  stats.json
conf/base/: logging.yml
docs/source/: conf.py  index.rst
spaceship-titanic/: kernel-metadata.json  spaceship-titanic.ipynb
src/: pyproject.toml  requirements.txt
src/datascience_projects/: __init__.py  __main__.py  nodes.py  pipeline.py  settings.py
src/tests/: test_run.py
