[tool.kedro]
package_name = "datascience_projects"
project_name = "datascience_projects"
kedro_init_version = "0.18.14"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/datascience_projects -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.poetry]
name = "datascience-projects"
version = "0.1.0"
description = ""
authors = ["Florian Teich"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "==3.11.6"
kedro = "^0.18.14"
pandas = "^2.1.2"
sqlalchemy = "^2.0.23"
jupyter = "^1.0.0"
pyspark = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
